syntax="proto2";

import "AVChannelSetupStatusEnum.proto";

package aasdk.proto.messages;

message AVChannelSetupResponse
{
  required enums.AVChannelSetupStatus.Enum media_status = 1;
  required uint32 max_unacked = 2;
  repeated uint32 configs = 3;
}

option optimize_for = SPEED;
