syntax="proto2";

import "VideoFocusModeEnum.proto";

package aasdk.proto.messages;

message VideoFocusIndication
{
  required enums.VideoFocusMode.Enum focus_mode = 1;
  required bool unrequested = 2;
}

option optimize_for = SPEED;
